# techno_c_2

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  generate  main.c  pre_install  speed_test
include/count_symbols/: count_symbols.h
src/: CMakeLists.txt  count_symbols.c  count_symbols_multiple_proc.c  count_symbols_single_proc.c  main.c  main_single_proc.c  speed_test.c
test/: CMakeLists.txt  count_symbols.cpp
